# bvh_tools

./: README.md  bvh_copy.py  bvh_extract.py  bvh_plot.py  pyproject.toml
tests/tools/: fixtures.py  test_putils.py  test_skeleton.py
tools/: bvh.py  bvh_write.py  centroid.py  channels.py  glplot.py  plot.py  putils.py  skeleton.py
